<resources>
    <string name="web_order_activity">https://sales.atr-eg.com/reort_visits.php#</string>
    <string name="app_name">ATR Order</string>
    <string name="welcome_to_visits">Welcome to Visits</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="learn_more">Learn More</string>
    <string name="welcome_visits">now you can enter visits with an android mobile application very easy to use Choose customer ,order type and Go on..</string>
    <string name="home">Home</string>
    <string name="order_type">Order Type:</string>
    <string name="tickets">Tickets</string>
    <string name="message">الرسالة</string>
    <string name="something_went_wrong">Somthing went wrong</string>
    <string name="try_again">Try Again</string>
    <string name="employee_name">اسم العميل:</string>
    <string name="invoice_number">رقم الفاتورة:</string>
    <string name="customer_type">Customer Type:</string>
    <string name="select_line">Select Line:</string>
    <string name="customer_line">Customer Name:</string>
    <string name="choose_customer">Choose Site: </string>
    <string name="select_visibility">Select visibility</string>
    <string name="visits_details">Visits Details</string>
    <string name="payment_type">Payment Type :</string>
    <string name="payments_term">Payments Term</string>
    <string name="continue_to_order">Continue To Order</string>
    <string name="add_order">Add Order</string>
    <string name="items">Items</string>
    <string name="bonus_vis">Bonus:</string>
    <string name="items_name">رصيد()—2386306—40001—PROZAC PULV 20MG X14BLCD XE</string>
    <string name="unit_price">Price</string>
    <string name="price">100</string>
    <string name="tax_value">Tax Value:</string>
    <string name="choose_item">Choose item</string>
    <string name="turn_over">Turn Over</string>
    <string name="add_return">Add Return</string>
    <string name="phone_visit">Phone Visits</string>
    <string name="print">Print</string>
    <string name="visits">Visits</string>
    <string name="customer_name">Customer Name</string>
    <string name="select_customer_name">اسم العميل</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="order_details">Order Details</string>
    <string name="confirmed">Confirmed</string>
    <string name="orders_history">Orders History</string>
    <string-array name="spinner_payment_type">
        <item>1000--نقدى بدون خصم </item>
        <item>10010--خصم نقدى 3% فقط--خاص باصناف ادوية معينة ولا يتم اختيارها لعميل معين </item>
        <item>52013--مطالبة </item>
        <item>101014--نقدي 3% فتح 2% أجل 90 يوم </item>
        <item>106014--نقدى مع السيارة </item>
    </string-array>
    <string-array name="spinner_items">
        <item>LIMITLESS VEGAN PROTEIN STRAWBERRY </item>
        <item>LIMITLESS VEGAN PROTEIN STRAWBERRY </item>
        <item>LIMITLESS VEGAN PROTEIN STRAWBERRY </item>
        <item>LIMITLESS VEGAN PROTEIN STRAWBERRY </item>
    </string-array>
    <string-array name="spinner_bonus">
        <item> عادي </item>
        <item> عرض 1 </item>
        <item> عرض 2 </item>
        <item> Stand Order </item>
    </string-array>
    <string-array name="orderOrReturn">
        <item> Order </item>
        <item> Return </item>
    </string-array>
    <string name="enable_gps">Enable Device\'s GPS</string>
    <string name="permission_request">Location Permissions Required</string>
    <string name="location_successfully_received">Location updates...</string>
    <string name="title_permission_permanently_denied">Location Permission Permanently Denied</string>
    <string name="message_permission_permanently_denied">The app will not work without providing location permission.

 Open App settings -> Permissions -> Allow permission.</string>
    <string name="title_permission_denied">Location Permission Denied</string>
    <string name="message_permission_denied">The app will not work without providing location permission. Allow permission?</string>
    <string name="settings">Settings</string>
    <string name="not_now">Not now</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="promoter">Promoter</string>
    <string name="save">save</string>
    <string name="order_source">Order Source</string>
    <string name="pending">Pending</string>
    <string name="send">Send</string>
    <string name="price_list">Price List</string>
    <string name="no_data">No Data</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_customer_type">تحديد نوع العميل</string>
    <string name="select_customer_line">تحديد خط العميل</string>
    <string name="select_customer_category">تحديد فئة العميل</string>
    <string name="select_area">تحديد المنطقة</string>
    <string name="write_customer_name">ادخل اسم العميل</string>
    <string name="write_customer_address">ادخل عنوان العميل</string>
    <string name="write_customer_phone">ادخل رقم الهاتف المحمول</string>
    <string name="write_customer_mobile">ادخل رقم الهاتف الارضى</string>
    <string name="write_nationality_id">ادخل الرقم القومى</string>
    <string name="write_nationality_name">ادخل اسم العميل فى البطاقة</string>
    <string name="write_nationality_address">ادخل عنوان العميل فى البطاقة</string>
    <string name="cutsomer_coding">تكويد عميل</string>
    <string name="submit">ارسال</string>
    <string name="support_info">
    --- معلومات الدعم ---
    التطبيق: %1$s
    النسخة: %2$s
    النظام: %3$s
    الجهاز: %4$s
    </string>
    <string name="determine_itinerary_visit">تحديد مسار الزيارة</string>
    <string name="determine_itinerary_phone_visit">تحديد مسار الزيارة الهاتفية</string>
    <string name="choose_type_sale">اختر نوع البيع</string>
    <string name="chosen_type_sale">نوع البيع المختار</string>
    <string name="please_specify_target_sales_type_begin_creating_visit_plan">يرجي تحديد نوع البيع المستهدف للبدء بانشاء خطة الزيارة</string>
    <string name="change_type_sale">تغيير نوع البيع</string>
    <string name="search_customer_name_code">ابحث باسم العميل أو الكود...</string>
    <string name="search_customer_invoice_number">ابحث باسم العميل أو رقم الفاتورة...</string>
    <string name="change_work">تغيير العمل</string>
    <string name="choose_customer_address">اختر عنوان العميل</string>
    <string name="objective_visit">هدف الزيارة</string>
    <string name="collect_today">تحصيل اليوم</string>
    <string name="visiting_position">موقف الزيارة</string>
    <string name="save_visit">حفظ الزيارة</string>
    <string name="visit_notes">ملاحظات الزيارة</string>
    <string name="client">العميل</string>
    <string name="order">طلبية</string>
    <string name="negative">سلبية</string>
    <string name="collection">تحصيل</string>
    <string name="saved_successfully">تم الحفظ بنجاح</string>
    <string name="order_creation_cycle">دورة إنشاء الطلبية</string>
    <string name="choose_from_menu">اختر من القائمة...</string>
    <string name="code">كود</string>
    <string name="sale_type">نوع الطلب</string>
    <string name="invoice">الفاتورة</string>
    <string name="_return">المرتجع</string>
    <string name="currency">ج.م</string>
    <string name="cust_price">جمهور</string>
    <string name="quantity">الكمية</string>
    <string name="total">الإجمالي</string>
    <string name="requested">مطلوب</string>
    <string name="remaining">Back Order</string>
    <string name="no_product_choosen">لم يتم اختيار المنتج</string>
    <string name="price2">السعر</string>
    <string name="no_selected_products">لا يوجد بيانات</string>
    <string name="selected">المختارة</string>
    <string name="all">الكل</string>
    <string name="weekday_sun_short">أح</string>
    <string name="weekday_mon_short">ن</string>
    <string name="weekday_tue_short">ث</string>
    <string name="weekday_wed_short">ر</string>
    <string name="weekday_thu_short">خ</string>
    <string name="weekday_fri_short">ج</string>
    <string name="weekday_sat_short">س</string>
    <string name="delete_visit_title">حذف الزيارة</string>
    <string name="delete_visit_message">هل انت متاكد من حذف تلك الزياره...</string>
    <string name="delete_now">حذف الآن</string>
    <string name="filter_title">تصفية الزيارات</string>
    <string name="date_from_label">من تاريخ</string>
    <string name="date_to_label">إلى تاريخ</string>
    <string name="select_date_hint">اختر التاريخ</string>
    <string name="card_date">تاريخ الفاتوره</string>
    <string name="apply_filter">تطبيق</string>
    <string name="clear_filter">مسح</string>
</resources>